--- a/resources/sass/partials/_commons.scss
+++ b/resources/sass/partials/_commons.scss
@@ -4,7 +4,7 @@
     display: flex;
 }
 
-@mixin disp-flex-header {
+@mixin disp-flex-navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
