--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 @import 'partials/vars';
 @import 'partials/commons';
 @import 'partials/header';
+@import 'partials/footer';
 // COMPONENTE: STUDENTS
 @import 'partials/students';
